--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Step 3: Build and push FastAPI image to the Azure Container Registry
+      # Step 3: Build and push FastAPI image to Azure Container Registry
       - name: 'Build and push image'
         uses: azure/docker-login@v1
         with:
@@ -44,7 +44,11 @@ jobs:
             DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
             DB_NAME=${{ secrets.POSTGRES_DB }}
 
-      # Step 5: Deploy PostgreSQL to Azure Container Instances
+      # Step 5: Docker Hub login (authentication to Docker Hub)
+      - name: 'Login to Docker Hub'
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+      # Step 6: Deploy PostgreSQL to Azure Container Instances
       - name: 'Deploy PostgreSQL to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
